--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,6 @@
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.15",
     "angular-bootstrap": "",
-    "bootstrap": ""
+    "bootstrap": "",
   }
 }
